force-app/main/default/objects/TU_CR_Settings__c/TU_CR_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TU CR Settings</label>
</CustomObject>