force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>TU_Certificate_Name__c</fullName>
    <label>TU Certificate Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>