force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Credit_API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>TU_Credit_API_Endpoint__c</fullName>
    <label>TU Credit API Endpoint</label>
    <type>Url</type>
</CustomField>