force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Credit_API_Port__c.field-meta.xml
<CustomField>
    <fullName>TU_Credit_API_Port__c</fullName>
    <label>TU Credit API Port</label>
    <length>255</length>
    <type>Text</type>
</CustomField>