force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>TU_Industry_Code__c</fullName>
    <label>TU Industry Code</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>