force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Inquiry_Subscriber_Prefix_Code__c.field-meta.xml
<CustomField>
    <fullName>TU_Inquiry_Subscriber_Prefix_Code__c</fullName>
    <label>TU Inquiry Subscriber Prefix Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>