force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Member_Code__c.field-meta.xml
<CustomField>
    <fullName>TU_Member_Code__c</fullName>
    <label>TU Member Code</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>