force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Password__c.field-meta.xml
<CustomField>
    <fullName>TU_Password__c</fullName>
    <label>TU Password</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>