force-app/main/default/objects/TU_CR_Settings__c/fields/TU_System_Password__c.field-meta.xml
<CustomField>
    <fullName>TU_System_Password__c</fullName>
    <label>TU System Password</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>