force-app/main/default/objects/TU_CR_Settings__c/fields/TU_SystemID__c.field-meta.xml
<CustomField>
    <fullName>TU_SystemID__c</fullName>
    <label>TU System ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>