force-app/main/default/objects/TU_CR_Settings__c/fields/TU_Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>TU_Vendor_Id__c</fullName>
    <label>TU Vendor Id</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>